Start refactoring file handling for multi-file builds, add build directory flag & sync for coop coding